--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-pdf/renderer": "^4.2.1",
     "@reduxjs/toolkit": "^2.5.1",
